<?xml version="1.0" encoding="utf-8"?>
<!--10120175 - I Wayan Widi P - IF5 - August 2023-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.InfoFragment1">

    <TextView
        android:id="@+id/navigation_info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/page1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/foto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/launcher_f" />

        <TextView
            android:id="@+id/pembuka"
            android:layout_width="369dp"
            android:layout_height="81dp"
            android:layout_below="@id/foto"
            android:layout_marginTop="10dp"
            android:elevation="12dp"
            android:justificationMode="inter_word"
            android:text="@string/pembuka"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/menu_home"
            android:layout_width="373dp"
            android:layout_height="137dp"
            android:layout_below="@id/pembuka"
            android:layout_marginTop="10dp"
            android:elevation="12dp"
            android:justificationMode="inter_word"
            android:text="@string/menu_home"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/menu_profile"
            android:layout_width="376dp"
            android:layout_height="44dp"
            android:layout_below="@id/menu_home"
            android:layout_marginTop="10dp"
            android:elevation="12dp"
            android:justificationMode="inter_word"
            android:text="@string/menu_profile"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/menu_info"
            android:layout_width="373dp"
            android:layout_height="56dp"
            android:layout_below="@id/menu_profile"
            android:layout_marginTop="10dp"
            android:elevation="12dp"
            android:justificationMode="inter_word"
            android:text="@string/menu_logout"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="369dp"
            android:layout_height="34dp"
            android:layout_below="@id/menu_info"
            android:layout_marginTop="30dp"
            android:elevation="12dp"
            android:justificationMode="inter_word"

            android:text="@string/copyright"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>